install/kubeadm/objects/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-1-17
  name: nginx-1-17
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-1-17
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-1-18
  name: nginx-1-18
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-1-18
